BcmTVInput: Give initial focus to start scan button in settings
Probably helps with being able to start a scan from the command line

refs #SWANDROID-1361

Change-Id: I942c507660e1994d0a6e8cd60b893062bc4eb40e

--- a/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
+++ b/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
@@ -19,7 +19,9 @@
             android:checked="false"
             android:onClick="startStopBlindScan"
             android:textOff="@string/scan_button_label"
-            android:textOn="@string/stop_button_label" />
+            android:textOn="@string/stop_button_label">
+            <requestFocus/>
+        </ToggleButton>
 
         <TableLayout
             android:layout_width="match_parent"
