--- a/bcm_platform/app/BcmTVInput/res/xml/tunerservice.xml
+++ b/bcm_platform/app/BcmTVInput/res/xml/tunerservice.xml
@@ -15,4 +15,5 @@
 -->
 
 <tv-input xmlns:android="http://schemas.android.com/apk/res/android"
-    android:settingsActivity="com.broadcom.tvinput.TunerSettings" />
+    android:settingsActivity="com.broadcom.tvinput.TunerSettings"
+    android:setupActivity="com.broadcom.tvinput.TunerSettings" />
