BcmTVInput: Rework stream clock capture
Clock is now acquired on startup (rather than tune) so settings app button
can set Android time from stream time.

Then it is only necessary to stop Live Channels, clear data, and Open to
get the guide presented.

refs #SWANDROID-1361

Change-Id: I0e0cffba97775e24068bbec9b4ef84095cb5555b

--- a/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
+++ b/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
@@ -181,10 +181,10 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_streamer_mode"
+        android:id="@+id/button_set_clock_from_stream"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="setStreamerMode"
-        android:text="@string/streamer_mode_button_label" />
+        android:onClick="setClockFromStream"
+        android:text="@string/set_clock_from_stream_button_label" />
 
 </LinearLayout>
