BcmTVInput: Satellite/Cable scanning phase 1
refs #SWANDROID-1361

Java class ScanParams implemented, and passed from TunerSettings to
TunerService via startScan private command.

No code to map ScanParams to BroadcastScanParams in JNI. But, enough
code to allow UI to be written.

Change-Id: I3ab0959dafcbc5e1e6bf3707246c83eec4b8b9e5

--- a/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
+++ b/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:checked="false"
-            android:onClick="startStopBlindScan"
+            android:onClick="startStopScan"
             android:textOff="@string/scan_button_label"
             android:textOn="@string/stop_button_label">
             <requestFocus/>
