--- a/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
+++ b/bcm_platform/app/BcmTVInput/res/layout/tuner_settings.xml
@@ -180,11 +180,25 @@
         </TableLayout>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button_set_clock_from_stream"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="setClockFromStream"
-        android:text="@string/set_clock_from_stream_button_label" />
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp" >
+
+        <Button
+            android:id="@+id/button_set_clock_from_stream"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="setClockFromStream"
+            android:text="@string/set_clock_from_stream_button_label" />
+
+        <TextView
+            android:id="@+id/text_broadcast_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        </LinearLayout>
 
 </LinearLayout>
