adjust-screen: add a 'reset' button to ease testing.
refs #SWANDROID-2883

Change-Id: Ib82716969b8e6e0fe62b26184ce242ad1b9f7994
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/app/BcmAdjustScreenOffset/res/layout/main.xml
+++ b/bcm_platform/app/BcmAdjustScreenOffset/res/layout/main.xml
@@ -34,4 +34,10 @@
         android:layout_height="wrap_content"
         android:text="@string/ydec" />
 
+    <Button
+        android:id="@+id/button_reset"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="@string/reset" />
+
 </LinearLayout>
