--- a/app/LeanbackBcmCustom/res/values/config.xml
+++ b/app/LeanbackBcmCustom/res/values/config.xml
@@ -2,4 +2,13 @@
 <resources>
     <!-- DO NOT TRANSLATE -->
     <string name="partner_wallpaper" translatable="false">bg_custom</string>
+
+    <!-- DO NOT TRANSLATE -->
+    <string-array name="home_screen_row_ordering" translatable="false">
+        <item>partner_row</item>
+        <item>apps_row</item>
+        <item>games_row</item>
+        <item>inputs_row</item>
+        <item>settings_row</item>
+    </string-array>
 </resources>
