SWANDROID-2465 UI added for configurable tuning parameters
Support is added for detecting the frontend tuner types (terrestiral or
satellite). For satellite frontend UI is added for configuring tuning
parameters for single frequncy scan or network scan. For terrestrial frontend
only network scan is supported.

Allow BcmTVInput app to handle the case when ANDROID_SUPPORTS_DTVKIT set to n.
For terrestrial FE box app will tune to hard coded tuning parameters.
Code cleanup with appropriate priority for debug logs.

refs #SWANDROID-2465

Change-Id: Ie921681e73c048662ab6c03757f587d52de7db14

--- a/apks/BcmTVInput/res/xml/tunerservice.xml
+++ b/apks/BcmTVInput/res/xml/tunerservice.xml
@@ -15,5 +15,5 @@
 -->
 
 <tv-input xmlns:android="http://schemas.android.com/apk/res/android"
-    android:settingsActivity="com.broadcom.tvinput.TunerSettings"
-    android:setupActivity="com.broadcom.tvinput.TunerSettings" />
+    android:settingsActivity="com.broadcom.tvinput.MainActivity"
+    android:setupActivity="com.broadcom.tvinput.MainActivity" />
