--- a/apks/BcmBP3Config/res/layout/activity_bp3.xml
+++ b/apks/BcmBP3Config/res/layout/activity_bp3.xml
@@ -9,6 +9,7 @@
     <RadioGroup
         android:id="@+id/idRadioGroup"
         android:layout_width="wrap_content"
+        android:theme="@style/AppTheme"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="16dp">
