--- a/apks/BcmBP3Config/res/values/colors.xml
+++ b/apks/BcmBP3Config/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
-    <dimen name="large_height">150dp</dimen>
-    <dimen name="small_height">40dp</dimen>
+    <color name="colorControlHighlight">#FF7010</color>
 </resources>
