BP3 App: Better management of the UI widgets when the soft-keyboard is active. Also, enable/disable highlighting the RunApp button based on the focus
refs #SWANDROID-5141

Change-Id: I11113a95b429f0898b7fb86f18ff7c9a139e9291

--- a/apks/BcmBP3Config/res/values/colors.xml
+++ b/apks/BcmBP3Config/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorControlHighlight">#FF7010</color>
+    <color name="colorCrimson">#DC143C</color>
+    <color name="colorLightGray">#FFCCCCCC</color>
+    <color name="colorDarkGray">#8B8989</color>
 </resources>
